--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "next-auth": "^4.24.5",
+    "nodemailer": "^7.0.7",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^6.4.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
