--- a/package.json
+++ b/package.json
@@ -10,21 +10,25 @@
   },
   "dependencies": {
     "@prisma/client": "^5.10.2",
+    "@types/nodemailer": "^7.0.5",
     "bcryptjs": "^2.4.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.2",
     "next-auth": "^4.24.5",
-    "nodemailer": "^7.0.7",
+    "nodemailer": "^7.0.12",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
-    "@types/nodemailer": "^6.4.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/xlsx": "^0.0.35",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
     "prisma": "^5.10.2",
